fixed viewport bug

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     			<br>
 
-    			<div data-bind="foreach: model">
+    			<div class="span12" data-bind="foreach: model">
     				<div class=" venue list row">
 	    				<div class="col-md-12 text-left" data-bind="attr: {id : id}">
 	    					<h5 class="header" data-bind="text: title"></h5>
