--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    				<div class="col-md-12 text-left" data-bind="attr: {id : id}">
 	    					<strong class="header" data-bind="text: title"></strong>
 	    					<p data-bind="text: location"></p>
-	    					<a type="button" class="btn btn-primary" data-bind="attr: {href: 'http://' + link}">Link</a>
+	    					<a type="button" class="btn btn-primary" data-bind="attr: {href: 'http://' + link}">Official Website</a>
 	    					<div data-bind="foreach: lineup">
                                 <div class="lineup">
 	    					        <p class="event-title" data-bind="text: title"></p>
@@ -70,7 +70,7 @@
 
 	    					</div>
 
-                            <a href="#" class="back-to-top">Back to Map</a>
+                            <a href="#" class="btn btn-primary">Back to Map</a>
 	    				</div>
 	    			</div>
     			</div>
@@ -108,5 +108,11 @@
     	<script type="text/javascript" src="js/bootstrap.min.js"></script>
     	<script type="text/javascript" src="js/knockout-3.3.0.js"></script>
     	<script type="text/javascript" src="js/main.js"></script>
+        <script>
+            //a little jQuery magic that collapses navbar onclick
+            $('.nav a').on('click', function(){
+                $(".navbar-toggle").click() 
+            });
+        </script>
   	</body>
 </html>
