--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav> 
         </div>
 
-    	<div class="container" id="mapDiv" data-bind="map: myMap"></div>
+    	<div class="container mapDiv" id="mapDiv" data-bind="map: myMap"></div>
 
     	<div class="container" id="list-view">
     		<div class="row text-center">
@@ -112,8 +112,8 @@
     	<script type="text/javascript" src="js/main.js"></script>
         <script>
             //a little jQuery magic that collapses navbar onclick
-            $('.nav a').on('click', function(){
-                $(".navbar-toggle").click() 
+            $('.nav a').on('click', function() {
+                $(".navbar-toggle").click();
             });
         </script>
   	</body>
