Readme and About update

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     			<h1>About</h1>
 				<h4>Frameworks and APIs</h4>
 				<p>• Google Maps Javascript API</p>
+                <p>• Google Maps Street View API</p>
 				<p>• Twitter Bootstrap</p>
 				<p>• Knockout.js</p>
 				<p>• jQuery</p>
