--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
     	<div class="container" id="about">
     		<div class="row text-center">
     			<h1>About</h1>
+                <h5>SxSW Music Map is an open source project maintained by Nick Griffin.</h5>
+                <h5>The source code can be found at: <a src="https://github.com/nickgriffin1/SxSW-Music-Map">https://github.com/nickgriffin1/SxSW-Music-Map</a></h5>
+
+                <hr>
+
 				<h4>Frameworks and APIs</h4>
 				<p>• Google Maps Javascript API</p>
                 <p>• Google Maps Street View API</p>
